--- a/app/src/main/assets/www/views/mobile.html
+++ b/app/src/main/assets/www/views/mobile.html
@@ -2,92 +2,61 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title></title>
-
-    <!-- 移动设备支持 -->
+    <title></title> <!-- 移动设备支持 -->
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+    <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+          name="viewport">
     <meta content="no-cache,must-revalidate" http-equiv="Cache-Control">
     <meta content="no-cache" http-equiv="pragma">
     <meta content="0" http-equiv="expires">
     <meta content="telephone=no, address=no" name="format-detection">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
     <link href="../public/css/reset1.css" rel="stylesheet" type="text/css">
     <link href="../public/css/mod1.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../public/css/reset.css" type="text/css">
     <link rel="stylesheet" href="../public/css/font.css" type="text/css">
     <link rel="stylesheet" href="../public/css/animation.css" type="text/css">
+    <link rel="stylesheet" href="../public/css/preview.css" type="text/css">
     <script type="text/javascript" src="../public/js/jquery-1.8.2.min.js"></script>
-    <style>
-        footer {display:block; position:fixed; bottom:0; width:100%; line-height:2.5;  color:#fff; font-size:12px; text-align:center; background-color:#333; z-index:100; opacity:0.6}
-        footer a { color:white; }
-    </style>
 </head>
 <body>
-<script>
-    var gd = true;//true:无限滚动，false:到最后页不能再滚
-</script>
-<div  class="p-index main" id="con">
-    <!--上下滚动 start-->
-    <section class="m-page hide" >
-        <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
+<div class="p-index main" id="con">
+    <section class="m-page hide pages-item">
+        <div class="m-img">
+            <div class="stage-content edit-area pages-img pages-img-bg"
+                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/bg.jpg);background-size: cover;background-position:100% 100%;width:100%;height:100%;">
+                <div class="symbol">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png"/>
+                    </div>
+                </div>
+                <div class="symbol" style="background:green;">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png"/>
+                    </div>
+                </div>
+                <div class="symbol" style="z-index: 3;">
+                    <div class="pages-txt edit-area"
+                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">asdfasdasfadsfasdf As c
+                        update of the classictranslation corpus, the combination of network technology and language
+                        essence
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-
-    <section class="m-page hide" >
-        <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-    </section>
-
-    <section class="m-page hide" >
-        <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-    </section>
-
-    <section class="m-page hide" >
-        <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-    </section>
-
-    <section class="m-page hide" >
-        <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-    </section>
-
-    <section class="m-page hide" >
-        <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-    </section>
-
-
-
-    <section class='u-arrow'><img src="../public/img/btn01_arrow.png" /></section>
-    <!--上下滚动代码 end-->
+    <section class="u-arrow"><img src="../public/img/btn01_arrow.png"/></section>
 </div>
-
-<!--音乐-->
-<div id="audio-btn" class="on" onclick="lanren.changeClass(this,'media')">
-    <audio loop="loop" src="../public/img/mymusic.mp3" id="media" preload="preload"></audio>
+<div id="audio-btn" class="on">
+    <audio loop="loop" src="/mnt/sdcard/wisape/com.wisape.android/data/music/yyzd.mp3" id="media"
+           preload="preload"></audio>
 </div>
-<script>
-    var lanren = {
-        changeClass: function (target,id) {
-            var className = $(target).attr('class');
-            var ids = document.getElementById(id);
-            (className == 'on')
-                    ? $(target).removeClass('on').addClass('off')
-                    : $(target).removeClass('off').addClass('on');
-            (className == 'on')
-                    ? ids.pause()
-                    : ids.play();
-        },
-        play:function(){
-            document.getElementById('media').play();
-        }
-    }
-    lanren.play();
-    <!--代码部分end-->
-</script>
+<div id="prBack" class="icon-arrow-left-cirle" style="position: fixed;left:10px;top:20px;z-index: 999"></div>
+<div id="prEdit" class="icon-pencil-circle" style="position: fixed;right:10px;top:20px;z-index: 999"></div>
+<div id="publish" class="icon-publish-circle" style="position: fixed;right:10px;bottom:20px;z-index: 999"></div>
+<script src="../public/js/preview.js"></script>
 <script type="text/javascript" src="../public/js/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="../public/js/page_scroll_bx.js"></script>
 </body>
 </html>
-
-
-
