--- a/app/src/main/assets/www/views/index2.html
+++ b/app/src/main/assets/www/views/index2.html
@@ -11,8 +11,10 @@
 </head>
 <body>
 
+<div class="loading" style="position: fixed;left:0;top:0;bottom:0;right:0;background-image:url(../public/img/loading.gif);background-position:50% 50%;background-size:cover;z-index: 10000">
+</div>
 
-<div id="main" class="page" style="display: none">
+<div id="main" class="page" style="display: block">
     <div class="header">
         <div class="pull-left">
             <a class="icon-arrow-left" id="storySave"></a>
@@ -63,7 +65,7 @@
     <span class="icon-add-stage" id="AddNewStage"></span>
 </div>
 
-<div id="editorText" style="display: block">
+<div id="editorText" style="display: none">
     <div class="header">
         <div class="pull-left">
             <a class="icon-arrow-left backToMain" ></a>
