--- a/app/src/main/assets/www/views/index.html
+++ b/app/src/main/assets/www/views/index.html
@@ -90,8 +90,8 @@
         </div>
         <div class="bd opts">
             <div class="item" data-name="pop-editer-color"><span class="opt-name">Color</span><span class="opt-right"><span class="opt-val-color" style="background-color: #fff"></span><i class="icon-arrow-right-list"></i></span></div>
-            <div class="item" id="pop-editer-font" data-name="pop-editer-font"><span class="opt-name">Font</span><span class="opt-right"><span class="opt-val">Hevele</span><i class="icon-arrow-right-list"></i></span></div>
-            <div class="item" data-name="pop-editer-animation"><span class="opt-name">Animation</span><span class="opt-right"><span class="opt-val">Animation1</span><i class="icon-arrow-right-list"></i></span></div>
+            <div class="item" id="pop-editer-font" data-name="pop-editer-font"><span class="opt-name">Font</span><span class="opt-right"><span class="opt-font-val">Hevele</span><i class="icon-arrow-right-list"></i></span></div>
+            <div class="item" data-name="pop-editer-animation"><span class="opt-name">Animation</span><span class="opt-right"><span class="opt-animation-val"><i ></i></span><i class="icon-arrow-right-list"></i></span></div>
         </div>
     </div>
 
@@ -397,6 +397,8 @@
                 console.info(type + " done!!!");
             })
         }
+
+
 
 
     </script>
