--- a/app/src/main/assets/www/public/css/editor_index.css
+++ b/app/src/main/assets/www/public/css/editor_index.css
@@ -306,9 +306,10 @@ a {text-decoration: none;color:inherit;}
 .pop-editer-opt .item {border-bottom:1px solid #d5d6d7;padding:10px;}
 .pop-editer-opt .item:last-child {border:none;}
 .pop-editer-opt .opt-right,.pop-editer-font .opt-right {float:right;color:#19c702;}
-.pop-editer-opt .opt-right i {width:10px;height:15px;background-size: auto 100%;margin-left:5px;vertical-align: 3px;}
+.pop-editer-opt .opt-right i.icon-arrow-right-list {width:10px;height:15px;background-size: auto 100%;margin-left:5px;vertical-align: 3px;}
 .pop-editer-opt .opt-val {float:left;}
 .pop-editer-opt .opt-val-color {background:#fff;border:1px solid #ddd;width:20px;height:20px;display:inline-block;border-radius: 20px;}
+.pop-editer-opt .opt-animation-val i {display: inline-block;width:20px;height:20px;background-size: 100% 100%;border-radius: 20px;border:1px solid #52b502;}
 
 .pop-editer-font .tit,.pop-editer-color .tit,.pop-editer-animation .tit {vertical-align: top; font-size: 18px; color: #2d3437; margin-left: 10px;}
 .pop-editer-font .hd i,.pop-editer-color .hd i,.pop-editer-animation .hd i {width:48px;}
