--- a/app/src/main/assets/www/views/index.html
+++ b/app/src/main/assets/www/views/index.html
@@ -243,7 +243,7 @@
 <script src="../public/js/cordova.js"></script>
 <script type="text/javascript" charset="utf-8" src="cordova.file.js"></script>
 <script src="../public/js/jquery2.1.4.min.js"></script>
-<script src="../public/js/fastclick.js"></script>
+<!--<script src="../public/js/fastclick.js"></script>-->
 
 <script src="../public/js/template.js"></script>
 <script src="../public/js/hammer.min.js"></script>
@@ -407,7 +407,7 @@
 <script>
         $(function(){
 
-            FastClick.attach(document.body);
+            //FastClick.attach(document.body);
 
 
             var ColorArr = [
@@ -462,10 +462,6 @@
                     //$(evt.item).find(".drag-handle").css({"display":"none"})
                 },
             });
-
-//            $("#storyDragBox").delegate(".tpl-page-item","click",function(){
-//                $(this).toggleClass("selected")
-//            });
 
             $("#pageDel").click(function(){
                 $("#storyDragBox li.selected").remove();
