--- a/app/src/main/assets/www/views/header.html
+++ b/app/src/main/assets/www/views/header.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="file:///android_asset/www/public/css/font.css" type="text/css">
     <link rel="stylesheet" href="file:///android_asset/www/public/css/animation.css" type="text/css">
     <link rel="stylesheet" href="file:///android_asset/www/public/css/preview.css" type="text/css">
+    <link rel="stylesheet" href="FONT_STYLE_FILE_LOCATION" type="text/css">
     <script type="text/javascript" src="file:///android_asset/www/public/js/jquery-1.8.2.min.js"></script>
 </head>
 <body>
