--- a/app/src/main/assets/www/public/css/editor_index.css
+++ b/app/src/main/assets/www/public/css/editor_index.css
@@ -11,11 +11,11 @@
 body{
     font-family: Helvetica;
 }
-* {
+/** {*/
 
-    -webkit-tap-highlight-color: transparent;
-    -webkit-appearance: none;
-}
+    /*-webkit-tap-highlight-color: transparent;*/
+    /*-webkit-appearance: none;*/
+/*}*/
 *:focus {outline: none;}
 a {text-decoration: none;color:inherit;}
 .text-black{
@@ -298,7 +298,7 @@ a {text-decoration: none;color:inherit;}
 
 /*editor-text*/
 .pop-active {padding-bottom:150px;}
-.pop-editer-opt,.pop-editer-font,.pop-editer-color,.pop-editer-animation  {position: fixed;bottom:0;left:0;width:100%;background:#fff;}
+.pop-editer-opt,.pop-editer-font,.pop-editer-color,.pop-editer-animation  {position: fixed;bottom:0;left:0;width:100%;background:#fff;text-align: left;}
 .pop-editer-opt .hd,.pop-editer-font .hd,.pop-editer-color .hd,.pop-editer-animation .hd  {height:48px;background:#f2f2f2;border-top:1px solid #d5d6d7;border-bottom:1px solid #d5d6d7;line-height: 48px;}
 .pop-editer-opt .hd i,.pop-editer-font .hd i,.pop-editer-color .hd i,.pop-editer-animation .hd i {float:left;width:25%;height:48px;background-size: auto 30%;}
 .pop-editer-opt .opt-name  {color:#2d3437;font-size:14px;}
@@ -402,7 +402,8 @@ a {text-decoration: none;color:inherit;}
 
 .stage-content .symbol {}
 .stage { border-radius: 5px;overflow: hidden;}
-#editorText .pages {width:190px;margin:0 auto;}
+#editorText {text-align: center;}
+#editorText .pages {width:190px;margin:20px auto;}
 #editorText .pages .count {display: none}
 .stage-content .symbol {transform: scale(0.5);}
 .stage-content .edit-area {display:inline-block;position: relative;}
@@ -414,6 +415,7 @@ a {text-decoration: none;color:inherit;}
 .drag-handle {display:block;position: absolute; top: 0px; right: 0px; bottom:0;left:0;background: #000; width:100%;height:100%;opacity: 0}
 li.dragable .drag-handle {display: block;}
 .story-page-list .symbol {visibility: hidden;}
+.story-page-list .count {display: none}
 
 
 
