--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,7 +26,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:inputType="text"
         app:action="@drawable/icon_edit_clear_selector"
         app:edit_background="@drawable/sign_up_edit_bg_normal"
@@ -74,7 +74,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:background="@drawable/sign_up_btn_bg"
         android:text="@string/sign_up_btn"
         android:textAllCaps="false" />
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/sign_up_btn"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:singleLine="true"
         android:text="@string/forget_password" />
 
@@ -100,6 +100,7 @@
         android:background="@android:color/transparent"
         android:gravity="center"
         android:scaleType="center"
+        android:visibility="gone"
         android:src="@drawable/sign_up_with_twitter_selector" />
 
     <ImageButton
@@ -114,6 +115,7 @@
         android:background="@android:color/transparent"
         android:gravity="center"
         android:scaleType="center"
+        android:visibility="gone"
         android:src="@drawable/sign_up_with_facebook_selector" />
 
     <ImageButton
@@ -128,5 +130,6 @@
         android:background="@android:color/transparent"
         android:gravity="center"
         android:scaleType="center"
+        android:visibility="gone"
         android:src="@drawable/sign_up_with_google_plus_selector" />
 </RelativeLayout>
