--- a/app/src/main/assets/www/views/mobile.html
+++ b/app/src/main/assets/www/views/mobile.html
@@ -48,8 +48,8 @@
     </section>
     <section class="u-arrow"><img src="../public/img/btn01_arrow.png"/></section>
 </div>
-<div id="audio-btn" class="on">
-    <audio loop="loop" src="/mnt/sdcard/wisape/com.wisape.android/data/music/yyzd.mp3" id="media"
+<div id="audio-btn" class="" onclick="lanren.changeClass(this,'media')">
+    <audio loop="loop" src="/mnt/sdcard/wisape/com.wisape.android/data/music/yyzd.mp3"  id="media"
            preload="preload"></audio>
 </div>
 <div id="prBack" class="icon-arrow-left-cirle" style="position: fixed;left:10px;top:20px;z-index: 999"></div>
