--- a/app/src/main/assets/www/views/test2.html
+++ b/app/src/main/assets/www/views/test2.html
@@ -1,3 +1,138 @@
-<ul class="tabcon-item">
-    <li class="tabnav-item"> xxx </li>
-</ul>
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title></title> <!-- 移动设备支持 -->
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+          name="viewport">
+    <meta content="no-cache,must-revalidate" http-equiv="Cache-Control">
+    <meta content="no-cache" http-equiv="pragma">
+    <meta content="0" http-equiv="expires">
+    <meta content="telephone=no, address=no" name="format-detection">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link href="file:///android_asset/www/public/css/reset1.css" rel="stylesheet" type="text/css">
+    <link href="file:///android_asset/www/public/css/mod1.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="file:///android_asset/www/public/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="file:///android_asset/www/public/css/font.css" type="text/css">
+    <link rel="stylesheet" href="file:///android_asset/www/public/css/animation.css" type="text/css">
+    <link rel="stylesheet" href="file:///android_asset/www/public/css/preview.css" type="text/css">
+    <link rel="stylesheet" href="/mnt/sdcard/wisape/com.wisape.android/data/font/fonts.css" type="text/css">
+    <script type="text/javascript" src="file:///android_asset/www/public/js/jquery-1.8.2.min.js"></script>
+</head>
+<body>
+<div class="p-index main" id="con">
+    <section class="m-page hide pages-item">
+        <div class="m-img"><span class="count">1/4</span>
+
+            <div class="stage-content edit-area pages-img pages-img-bg"
+                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/bg.jpg);background-size: cover;background-position:100% 100%;width:100%;height:100%;">
+                <div class="symbol">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png">
+                    </div>
+                </div>
+                <div class="symbol" style="background:green;">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png">
+                    </div>
+                </div>
+                <div class="symbol" style="z-index: 3;">
+                    <div class="pages-txt edit-area active"
+                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">asdfasdasfadsfasdf As c
+                        update of the classictranslation corpus, the combination of network technology and language
+                        essence
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="m-page hide pages-item">
+        <div class="m-img">
+            <div class="stage-content edit-area pages-img pages-img-bg"
+                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/bg.jpg);background-size: cover;background-position:100% 100%;width:100%;height:100%;">
+                <div class="symbol">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png">
+                    </div>
+                </div>
+                <div class="symbol" style="background:green;">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png">
+                    </div>
+                </div>
+                <div class="symbol" style="z-index: 3;">
+                    <div class="pages-txt edit-area"
+                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">asdfasdasfadsfasdf As c
+                        update of the classictranslation corpus, the combination of network technology and language
+                        essence
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="m-page hide pages-item">
+        <div class="m-img">
+            <div class="stage-content edit-area pages-img pages-img-bg"
+                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/bg.jpg);background-size: cover;background-position:100% 100%;width:100%;height:100%;">
+                <div class="symbol">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png">
+                    </div>
+                </div>
+                <div class="symbol" style="background:green;">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png">
+                    </div>
+                </div>
+                <div class="symbol" style="z-index: 3;">
+                    <div class="pages-txt edit-area"
+                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">asdfasdasfadsfasdf As c
+                        update of the classictranslation corpus, the combination of network technology and language
+                        essence
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="m-page hide pages-item">
+        <div class="m-img"><span class="count">4/4</span>
+
+            <div class="stage-content edit-area pages-img pages-img-bg"
+                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/bg.jpg);background-size: cover;background-position:100% 100%;width:100%;height:100%;">
+                <div class="symbol">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png"
+                                                          draggable="false"></div>
+                </div>
+                <div class="symbol" style="background:green;">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png"
+                                                          draggable="false"><i class="ico-acitve"></i></div>
+                </div>
+                <div class="symbol" style="z-index: 3;">
+                    <div class="pages-txt edit-area active"
+                         style="margin-top: 70px; margin-right: auto; margin-bottom: 70px; margin-left: auto; width: 150px; color: rgb(255, 255, 255); text-align: center; font-family: UniSansHeavy; ">
+                        asdfasdasfadsfasdf As c update of the classictranslation corpus, the combination of network
+                        technology and language essence
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="u-arrow"><img src="file:///android_asset/www/public/img/btn01_arrow.png"/></section>
+</div>
+<div id="audio-btn" class="on">
+    <audio loop="loop" src="/mnt/sdcard/wisape/com.wisape.android/data/music/Light-Thought-var-2.mp3" id="media"
+           preload="preload"></audio>
+</div>
+<div id="prBack" class="icon-arrow-left-cirle" style="position: fixed;left:10px;top:20px;z-index: 999"></div>
+<div id="prEdit" class="icon-pencil-circle" style="position: fixed;right:10px;top:20px;z-index: 999"></div>
+<div id="publish" class="icon-publish-circle" style="position: fixed;right:10px;bottom:20px;z-index: 999"></div>
+<script src="file:///android_asset/www/public/js/cordova.js"></script>
+<script src="file:///android_asset/www/public/js/preview.js"></script>
+<script type="text/javascript" src="file:///android_asset/www/public/js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="file:///android_asset/www/public/js/page_scroll_bx.js"></script>
+</body>
+</html>
